# pyragify

./: .gitignore  AGENTS.md  PRD.md  README.md  config.yaml  mkdocs.yml  pyproject.toml  text2flow_optimized.yaml
.github/workflows/: docs.yml
docs/: changelog.md  contributing.md  index.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/reference/pyragify/: __init__.md  cli.md  graph.md  index.md  processor.md  utils.md
docs/user-guide/: cli-reference.md  knowledge-graph.md  output-formats.md  supported-languages.md
scripts/: gen_ref_pages.py
src/codeweaver/: __main__.py  cli.py  processor.py
src/pyragify/: cli.py  graph.py  processor.py
tests/: test_cli.py  test_processor.py  test_repo_processor.py
