[project]
name = "pyragify"
version = "0.2.0"
description = "A tool for processing code repositories into semantic chunks for analysis with LLMs, especiallyNotebookLM."
readme = "README.md"
requires-python = ">=3.9, <3.13"
authors = [
    {name = "ThomasBury"}
]
license = {text = "The Unlicense"}
keywords = ["code-processing", "chunking", "repository-analysis", "notebookLM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "omegaconf>=2.3.0",
    "pathspec>=0.12.1",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.0.0"
]

[project.urls]
homepage = "https://github.com/ThomasBury/pyragify"
repository = "https://github.com/ThomasBury/pyragify"

[project.scripts]
pyragify = "pyragify.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.29.1",
    "pymdown-extensions>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]
